Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjBooleanField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        boolean var = true
        return var
    end
end